# src/api/models/RoutePlaceDtoReq.ts
@@ -1,0 +1,68 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * TouristServer
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface RoutePlaceDtoReq
+ */
+export interface RoutePlaceDtoReq {
+    /**
+     * 
+     * @type {number}
+     * @memberof RoutePlaceDtoReq
+     */
+    placePosition?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof RoutePlaceDtoReq
+     */
+    placeId?: string;
+}
+
+/**
+ * Check if a given object implements the RoutePlaceDtoReq interface.
+ */
+export function instanceOfRoutePlaceDtoReq(value: object): value is RoutePlaceDtoReq {
+    return true;
+}
+
+export function RoutePlaceDtoReqFromJSON(json: any): RoutePlaceDtoReq {
+    return RoutePlaceDtoReqFromJSONTyped(json, false);
+}
+
+export function RoutePlaceDtoReqFromJSONTyped(json: any, ignoreDiscriminator: boolean): RoutePlaceDtoReq {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'placePosition': json['placePosition'] == null ? undefined : json['placePosition'],
+        'placeId': json['placeId'] == null ? undefined : json['placeId'],
+    };
+}
+
+export function RoutePlaceDtoReqToJSON(value?: RoutePlaceDtoReq | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'placePosition': value['placePosition'],
+        'placeId': value['placeId'],
+    };
+}
+
