# src/api/models/index.ts
@@ -10,7 +10,9 @@ export * from './PlaceDto';
 export * from './RegisterDto';
 export * from './RoutePlace';
 export * from './RoutePlaceDto';
+export * from './RoutePlaceDtoReq';
 export * from './TokenDto';
 export * from './User';
 export * from './UserRoute';
 export * from './UserRouteDto';
+export * from './UserRouteDtoReq';
